<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBlue">

    <com.github.abdularis.piv.VerticalScrollParallaxImageView
        android:id="@+id/img_coverDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:foreground="@drawable/bg_overlay"
        android:src="@drawable/tv_show_poster_naruto_shipudden"/>

    <RelativeLayout
        android:id="@+id/posterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:layout_below="@+id/img_coverDetail"
        android:paddingHorizontal="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/img_posterDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/tv_show_poster_naruto_shipudden"
                android:contentDescription="@string/content_description" />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btnImg_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tv_yearsRelease"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/darkBlue"
            android:src="@drawable/ic_baseline_share_24"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/tv_yearsRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="90dp"
            android:layout_toEndOf="@+id/cardView"
            android:text="@string/years_publish"
            android:textColor="@color/textDesc"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitleFilms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_yearsRelease"
            android:layout_alignStart="@+id/tv_yearsRelease"
            android:text="@string/Title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/posterView"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_duration"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textAlignment="center"
                        android:textColor="@color/textDesc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_director"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:id="@+id/tv_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textAlignment="center"
                        android:textColor="@color/textDesc" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_writer"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:id="@+id/tv_screenPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writer"
                        android:textAlignment="center"
                        android:textColor="@color/textDesc"
                        android:lines="1" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:contentPaddingLeft="35dp"
            app:contentPaddingTop="5dp"
            app:contentPaddingBottom="20dp"
            app:cardBackgroundColor="@color/darkBlue"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/date_release"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_ReleaseDateDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_date"
                        android:textAlignment="center"
                        android:textColor="@color/textDesc"
                        android:lines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/status"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_rilis"
                        android:textAlignment="center"
                        android:textColor="@color/textDesc"
                        android:lines="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/synopsis"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Banyak     "
                        android:textColor="@color/textDesc"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>