<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movie_show" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/tv_show" />

</menu>